--- a/overlay/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay/lineage-sdk/lineage/res/res/values/config.xml
@@ -59,4 +59,14 @@
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
     <integer name="config_deviceHardwareWakeKeys">64</integer>
+
+    <!-- Color temperature settings for LiveDisplay. These were obtained by
+         measuring the display at various color balance levels. -->
+    <integer name="config_minColorTemperature">2500</integer>
+    <integer name="config_maxColorTemperature">20000</integer>
+
+    <!-- Corresponds to color balance level of zero, this is the native
+         display temperature -->
+    <integer name="config_dayColorTemperature">8000</integer>
+    <integer name="config_nightColorTemperature">5000</integer>
 </resources>
